MacOS/AMD: Eevee doesn't draw anything on screen. #106672

Closed
opened 2023-04-07 16:36:41 +07:00 by Jeroen Bakker · 1 comments

Issue introduced by #106535. As this is one of the nomonies to be backported to 3.5.1. this is a high priority.

  • revert the changes one by one. I expect it is the macro unrolling in eevee.
Issue introduced by #106535. As this is one of the nomonies to be backported to 3.5.1. this is a high priority. - revert the changes one by one. I expect it is the macro unrolling in eevee.
Jeroen Bakker added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-04-07 16:36:42 +07:00
Jeroen Bakker added this to the EEVEE & Viewport project 2023-04-07 16:36:43 +07:00
Jeroen Bakker added this to the 3.5 milestone 2023-04-07 16:37:45 +07:00
Jeroen Bakker self-assigned this 2023-04-07 16:37:51 +07:00
Poster
Collaborator

I validated that reverting the HD4400-5500 fix, fixes the issue on MacOS/ATI. So next step is to find what part of the original patch introduces the issue.

I validated that reverting the HD4400-5500 fix, fixes the issue on MacOS/ATI. So next step is to find what part of the original patch introduces the issue.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-13 10:18:56 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106672
There is no content yet.