Fix #106672: MacOS/OpenGL doesn't draw anything Eevee related.

This PR reverts the breaking part of the #106535. This part doesn't seem
to be required to fix the HD4400-HD5500 issue.

Might also fix #106844.

Pull Request: https://projects.blender.org/blender/blender/pulls/106887